--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ taskw = "*"
 google-api-python-client = "*"
 google-auth-httplib2 = "*"
 google-auth-oauthlib = "*"
+xdg = "*"
+pyxdg = "*"
 
 [requires]
 python_version = "3.7"
